fix: sticky navbar z-index

--- a/src/styles/components/_lf-fixed-navbar.scss
+++ b/src/styles/components/_lf-fixed-navbar.scss
@@ -1,6 +1,8 @@
 @use '../media' as *;
 
 .lf-fixed-navbar {
+	z-index: 10;
+	
 	&__spacer {
 		@include mobile {
 			width: auto;
